2007-01-18  Danny Backx <dannybackx@users.sourceforge.net>

	* cegcc/importlibs/build.sh : add definition for mmtimer DLL.

2006-12-31  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_profile) : Copy the
	options from the mingw_runtime build, so src/profile/Makefile.in gets
	the right parameters and install stuff in the right place.
	* build-mingw32ce.sh, build-cegcc.sh (build_docs) : Copy
	some additional files that need to make it into an RPM.

2006-12-30  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_profile) : Change the
	approach to deal with -DNO_UNDERSCORES so we keep CFLAGS free for use
	by the command line.

2006-12-24  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_profile) : Add.
	* build-mingw32ce.sh, build-cegcc.sh (build_gcc) : Add --with-headers
	option so -Dinhibit_libc isn't triggered.

2006-12-19  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh (build-w32api): New function.
        Add w32api command line options that calls build-w32api.

2006-12-18  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_docs) : Add.

2006-11-18  Danny Backx <dannybackx@users.sourceforge.net>

	* build-mingw32ce.sh, build-cegcc.sh (build_gcc) : Work around
	gcc build system bug.

2006-10-27  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh : Remove duplicated build_all function.
	(copy_headers) : Add error handlers.
	* build-cegcc.sh (copy_w32api_headers) : Add missing ${BASE_DIRECTORY}.
	Add error handler.

2006-10-12  Pedro Alves  <pedro_alves@portugalmail.pt>

	* build-mingw32ce.sh : Make ${BUILD_DIR} absolute in default case.
	* build-cegcc.sh : Likewise.
	(build_gcc) : Switch to pushd/popd.

2006-10-10  Danny Backx <dannybackx@users.sourceforge.net>

	* w32api-3.7 : Remove. It is still possible to recover