@@ -19,20 +19,46 @@ echo '*/.svn*' >/tmp/exclude-$$
 echo '/*.cvs*' >>/tmp/exclude-$$
 echo '*/CVS' >>/tmp/exclude-$$
 echo '*/CVS/*' >>/tmp/exclude-$$
-echo 'cegcc-'$CEGCC_RELEASE'/src/build-cegcc' >>/tmp/exclude-$$
-echo 'cegcc-'$CEGCC_RELEASE'/src/build-cegcc/*' >>/tmp/exclude-$$
-echo 'cegcc-'$CEGCC_RELEASE'/src/build-mingw32ce' >>/tmp/exclude-$$
-echo 'cegcc-'$CEGCC_RELEASE'/src/build-mingw32ce/*' >>/tmp/exclude-$$
+echo 'cegcc-cegcc-'$CEGCC_RELEASE'/src/build-cegcc' >>/tmp/exclude-$$
+echo 'cegcc-cegcc-'$CEGCC_RELEASE'/src/build-cegcc/*' >>/tmp/exclude-$$
+echo 'cegcc-cegcc-'$CEGCC_RELEASE'/src/build-mingw32ce' >>/tmp/exclude-$$
+echo 'cegcc-cegcc-'$CEGCC_RELEASE'/src/build-mingw32ce/*' >>/tmp/exclude-$$
+echo 'cegcc-mingw32ce-'$CEGCC_RELEASE'/src/build-cegcc' >>/tmp/exclude-$$
+echo 'cegcc-mingw32ce-'$CEGCC_RELEASE'/src/build-cegcc/*' >>/tmp/exclude-$$
+echo 'cegcc-mingw32ce-'$CEGCC_RELEASE'/src/build-mingw32ce' >>/tmp/exclude-$$
+echo 'cegcc-mingw32ce-'$CEGCC_RELEASE'/src/build-mingw32ce/*' >>/tmp/exclude-$$
 echo '*~' >>/tmp/exclude-$$
 #
 cd $TOP_SRCDIR
-ln -s . cegcc-$CEGCC_RELEASE
+ln -s . cegcc-cegcc-$CEGCC_RELEASE
 tar --exclude-from=/tmp/exclude-$$ \
-	-cz -f /usr/src/rpm/SOURCES/cegcc-src-$CEGCC_RELEASE.tar.gz \
-	cegcc-$CEGCC_RELEASE/NEWS cegcc-$CEGCC_RELEASE/README \
-	cegcc-$CEGCC_RELEASE/scripts cegcc-$CEGCC_RELEASE/docs \
-	cegcc-$CEGCC_RELEASE/website cegcc-$CEGCC_RELEASE/test cegcc-$CEGCC_RELEASE/src
-rm cegcc-$CEGCC_RELEASE
+	-cz -f /usr/src/rpm/SOURCES/cegcc-cegcc-src-$CEGCC_RELEASE.tar.gz \
+	cegcc-cegcc-$CEGCC_RELEASE/NEWS \
+	cegcc-cegcc-$CEGCC_RELEASE/README \
+	cegcc-cegcc-$CEGCC_RELEASE/scripts/linux/cegcc.spec \
+	cegcc-cegcc-$CEGCC_RELEASE/docs \
+	cegcc-cegcc-$CEGCC_RELEASE/website \
+	cegcc-cegcc-$CEGCC_RELEASE/test \
+	cegcc-cegcc-$CEGCC_RELEASE/src
+rm cegcc-cegcc-$CEGCC_RELEASE
+#
+echo "Ready to build with"
+echo " "
+echo "	rm -rf /opt/cegcc/*"
+echo "	rpmbuild -tb /usr/src/rpm/SOURCES/cegcc-cegcc-src-"$CEGCC_RELEASE".tar.gz"
+echo "Note : " `ls -l /usr/src/rpm/SOURCES/cegcc-cegcc-src-"$CEGCC_RELEASE".tar.gz`
+#
+ln -s . cegcc-mingw32ce-$CEGCC_RELEASE
+tar --exclude-from=/tmp/exclude-$$ \
+	-cz -f /usr/src/rpm/SOURCES/cegcc-mingw32ce-src-$CEGCC_RELEASE.tar.gz \
+	cegcc-mingw32ce-$CEGCC_RELEASE/NEWS \
+	cegcc-mingw32ce-$CEGCC_RELEASE/README \
+	cegcc-mingw32ce-$CEGCC_RELEASE/scripts/linux/mingw32ce.spec \
+	cegcc-mingw32ce-$CEGCC_RELEASE/docs \
+	cegcc-mingw32ce-$CEGCC_RELEASE/website \
+	cegcc-mingw32ce-$CEGCC_RELEASE/test \
+	cegcc-mingw32ce-$CEGCC_RELEASE/src
+rm cegcc-mingw32ce-$CEGCC_RELEASE
 #
 # Remove temp file
 #
@@ -40,10 +66,10 @@ rm -f /tmp/exclude-$$
 #
 # Tell packager what to do.
 #
-echo "Now be sure to build with"
 echo " "
-echo "	rm -rf /opt/cegcc/* /opt/mingw32ce/*"
-echo "	rpmbuild -tb /usr/src/rpm/SOURCES/cegcc-src-"$CEGCC_RELEASE".tar.gz"
+echo "	rm -rf /opt/mingw32ce/*"
+echo "	rpmbuild -tb /usr/src/rpm/SOURCES/cegcc-mingw32ce-src-"$CEGCC_RELEASE".tar.gz"
+echo "Note : " `ls -l /usr/src/rpm/SOURCES/cegcc-mingw32ce-src-"$CEGCC_RELEASE".tar.gz`
 echo " "
 #
 # All done
